<resources>
    <string-array name="languages_array">
        <item>Select Language</item>
        <item>English</item>
        <item>Vietnamese</item>
    </string-array>
    
    <string name="app_name">Screen Test App</string>
    <string name="sys_info_btn_label">System Info</string>
    <string name="rgb_test_btn_label">Color Test</string>
    <string name="touch_test_btn_label">Touch Input Test</string>
    <string name="settings_menu_bar_name">Settings</string>
    <string name="language_spinner_label">Language</string>
    <string name="credit_info">Final Project: Mobile Programming (Practice)\nLCD Screen Test App\n\nCourse Lecturer: MSc. Nguyễn Thái Công Nghĩa\n\nTeam Member:\nHồ Hoàng Nghiệp - 20200277\nNguyễn Tiến Trung - 20200382</string>
    <string name="toast_touch_input_guide">Touch the screen by using as many fingers as you can</string>
    <string name="toast_touch_input_guide_2">Tap all the squares on screen</string>
    <string name="toast_touch_input_guide_3">Let\'s have some fun! You have 60 seconds to draw</string>
    <string name="toast_rgb_guide">Tap to see the next picture</string>
    <string name="get_sys_info">Get system info</string>
    <string name="screen_size">"Screen Size: "</string>
    <string name="screen_height">"Screen Height: "</string>
    <string name="screen_width">"Screen Width: "</string>
    <string name="device_name">"Board name: "</string>
    <string name="read_only_memory">"Available Internal Storage: "</string>
    <string name="memory">"System Memory: "</string>
    <string name="model">"Model: "</string>
    <string name="manufacture">"Manufacturer: "</string>
</resources>