<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/img_lcd">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/main_menu_app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:text="@string/app_name"
                android:layout_marginLeft="10dp"
                android:textColor="@color/white"
                android:textAlignment="viewStart"
                android:textSize="34sp"
                android:textStyle="bold"/>

            <ImageButton
                android:id="@+id/settings_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="10dp"
                android:background="@color/invisible"
                android:src="@drawable/settings_icon" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/sys_info_btn"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:text="@string/sys_info_btn_label"
                android:textSize="20dp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:background="@drawable/round_background" />

            <Button
                android:id="@+id/rgb_test_btn"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:text="@string/rgb_test_btn_label"
                android:layout_marginTop="15dp"
                android:textSize="20dp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:background="@drawable/round_background" />

            <Button
                android:id="@+id/touch_test_btn"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:text="@string/touch_test_btn_label"
                android:layout_marginTop="15dp"
                android:textSize="20dp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:background="@drawable/round_background" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>